--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>haru's portfolio sites</title>
-    <link rel="stylesheet" href="css_files/honoka/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <style>
         h2, h5 {
             position: relative;
@@ -27,7 +27,7 @@
 
         .main_img{
             height: auto;
-            background-image: url('image/portfolio_img_001.png');
+            background-image: url('portfolio_img_001.png');
             background-repeat: no-repeat;
             background-position: center top;
             background-size: cover;
@@ -218,7 +218,7 @@
                     <div class="row" style="padding-top: 30px;">
                         <div class="col-sm-2"></div>
                         <div class="col-sm-8">
-                            <img src="image/portfolio_top_img_001.PNG" class="card-img-top" alt="...">
+                            <img src="portfolio_top_img_001.PNG" class="card-img-top" alt="...">
                         </div>
                         <div class="col-sm-2"></div>
                     </div>
@@ -395,7 +395,7 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="css_files/honoka/js/bootstrap.min.js"></script>
+<script src="bootstrap.min.js"></script>
 
 </body>
 </html>
