--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>haru's portfolio sites top</title>
-    <link rel="stylesheet" href="css_files/honoka/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
 
     <style>
         .main_img{
             height: 100vh;
-            background-image: url('image/portfolio_img_001.png');
+            background-image: url('portfolio_img_001.png');
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
@@ -52,6 +52,6 @@
 
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="css_files/honoka/js/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 
 </body>
