--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -198,7 +198,7 @@
             <div class="row">
                 <div class="card mb-5 mx-auto col-sm-10">
                     <div class="card-body">
-                        <h5 class="card-title str_center"><span>転移学習を用いた胸部Ｘ線画像モデルの作成と性能評価</span></h5>
+                        <a href='https://github.com/iput2020-akamatsu/ml_x-ray'><h5 class="card-title str_center"><span>転移学習を用いた胸部Ｘ線画像モデルの作成と性能評価</span></h5></a>
                         <p class="card-text">
                             <div class="row">
                                 <div class="col-sm-2"></div>
@@ -206,7 +206,7 @@
                                     <p style="text-align: justify;">昨今の感染症の情勢で、疲弊している医療従事者の方を少しでも支援したいと思ったため、深層学習モデルであるVGG16、Vision Transformer、MLP-Mixerの学習済みモデルを用いて、胸部X線画像の分類モデルの転移学習を行いました。
                                     画像の前処理を様々試し、学習して、評価指標には、Torchevalを用いて、評価を行いました。また、論文の内容を解釈し、今まで使ったことのなかったPyTorchの使い方を学習することができました。
                                     Datasetは、データコンペティションサイト:Kaggleから取得して、学習をしました。難しい部分もありましたが、公式リファレンス、Webサイト、参考書で調査しながら、今現在（2023年2月28日）約80%の精度となっております。
-                                    </p>
+                                    </p></a>
                                 </div>
                                 <div class="col-sm-2"></div>
                             </div>
