--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -316,7 +316,7 @@
                                     
                                     <h5>Language</h5>
                                     <p class="card-text str_left">
-                                        python3<br>
+                                        Python3<br>
                                         C<br>
                                         C++<br>
                                     </p>
