--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -213,7 +213,26 @@
                         </p>
                     </div>
                 </div>
-
+                 
+                <div class="card mb-5 mx-auto col-sm-10">
+                    <div class="card-body">
+                        <a href='https://github.com/iput2020-akamatsu/qr_create_app'><h5 class="card-title str_center"><span>QR Create App</span></h5></a>
+                        <p class="card-text">
+                            <div class="row">
+                                <div class="col-sm-2"></div>
+                                <div class="col-sm-8">
+                                    <p style="text-align: justify;">
+                                        デスクトップアプリケーションの作成の練習もかねて、QRコードを作成するアプリを開発しました。
+                                        URL等からQRコードを生成して、表示することやpngファイルとして保存することができるようにしました。
+                                        GUIのフレームワークはTkinterを用いて開発しました。
+                                    </p>
+                                </div>
+                                <div class="col-sm-2"></div>
+                            </div>
+                        </p>
+                    </div>
+                </div>
+                
                 <div class="card mb-5 mx-auto col-sm-10">
                     <div class="row" style="padding-top: 30px;">
                         <div class="col-sm-2"></div>
