--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -269,7 +269,7 @@
             <div class="row">
                 <div class="card mb-5 mx-auto col-sm-10" style="width: auto;">
                     <div class="card-body">
-                        <h5 class="card-title str_center"><span>AI専門メディア企業での記事執筆経験</span></h5>
+                        <a href="https://ainow.ai/author/akamatsu/"><h5 class="card-title str_center"><span>AI専門メディア企業での記事執筆経験</span></h5></a>
                         <p class="card-text">
                             <div class="row">
                                 <div class="col-sm-2"></div>
