--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -222,7 +222,7 @@
                                 <div class="col-sm-2"></div>
                                 <div class="col-sm-8">
                                     <p style="text-align: justify;">
-                                        デスクトップアプリケーションの作成の練習もかねて、QRコードを作成するアプリを開発しました。
+                                        デスクトップアプリケーションとしてQRコードを作成するPCアプリを開発しました。
                                         URL等からQRコードを生成して、表示することやpngファイルとして保存することができるようにしました。
                                         GUIのフレームワークはTkinterを用いて開発しました。
                                     </p>
@@ -269,7 +269,7 @@
             <div class="row">
                 <div class="card mb-5 mx-auto col-sm-10" style="width: auto;">
                     <div class="card-body">
-                        <a href="https://ainow.ai/author/akamatsu/"><h5 class="card-title str_center"><span>AI専門メディア企業での記事執筆経験</span></h5></a>
+                        <a href='https://ainow.ai/author/akamatsu/'><h5 class="card-title str_center"><span>AI専門メディア企業での記事執筆経験</span></h5></a>
                         <p class="card-text">
                             <div class="row">
                                 <div class="col-sm-2"></div>
