--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -91,7 +91,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="#About_me_area">About me</a>
+                        <a class="nav-link active" href="#About_me_area">Profile</a>
                     </li>
 
                     <li class="nav-item">
@@ -162,7 +162,7 @@
     
         <section class="margin-bottom padding_scale">
             <div>
-                <h2 id="About_me_area" class="text-center"><span>About me</span></h2>
+                <h2 id="About_me_area" class="text-center"><span>Profile</span></h2>
             </div>
 
             <div class="row">
