--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -269,11 +269,11 @@
             <div class="row">
                 <div class="card mb-5 mx-auto col-sm-10" style="width: auto;">
                     <div class="card-body">
-                        <a href='https://ainow.ai/author/akamatsu/'><h5 class="card-title str_center"><span>AI専門メディア企業での記事執筆経験</span></h5></a>
+                        <a href='https://ainow.ai/author/akamatsu/'><h5 class="card-title str_center"><span>AI専門メディアでの記事執筆経験</span></h5></a>
                         <p class="card-text">
                             <div class="row">
                                 <div class="col-sm-2"></div>
-                                <div class="col-sm-8"><p style="text-align: justify;">インターン先のAI専門メディア企業でAI専門の記事の執筆業務を4週間行いました。AI技術について再勉強させていただき、文章の書き方から記事の書き方まで経験させていただきました。</p></div>
+                                <div class="col-sm-8"><p style="text-align: justify;">インターン先のAI専門メディアでAI専門の記事の執筆業務を4週間行いました。AI技術について再勉強させていただき、文章の書き方から記事の書き方まで経験させていただきました。</p></div>
                                 <div class="col-sm-2"></div>
                             </div>
                         </p>
