--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -350,7 +350,7 @@
                                         TensorFlow<br>
                                         PyTorch<br>
                                         pandas<br>
-                                        numpy<br>
+                                        NumPy<br>
                                         matplotlib<br>
                                     </p>
                                 </div>
@@ -362,8 +362,8 @@
                                     <h5 class="card-title">Tool</h5>
                                     <p class="card-text str_left">
                                         
-                                        Vscode<br>
-                                        Github<br>                                            
+                                        VSCode<br>
+                                        GitHub<br>                                            
                                     </p>
                                 </div>
                             </div>
