Update portfolio_pages.html_add favicon

--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>haru's portfolio sites</title>
+    <link rel="icon" href="vector-pen.svg" type="image/svg+xml">
+    
     <link rel="stylesheet" href="bootstrap.min.css">
     <style>
         h2, h5 {
