--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>haru's portfolio sites top</title>
-    <link rel="icon" href="vector-pen.svg" type="image/svg+xml">
-    
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="icon" href="./static/icon/vector-pen.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="./static/css_js/bootstrap.min.css">
 
     <style>
         .main_img{
             height: 100vh;
-            background-image: url('portfolio_img_001.png');
+            background-image: url('./static/images/portfolio_img_001.png');
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
@@ -54,6 +53,6 @@
 
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="bootstrap.min.js"></script>
+    <script src="./static/css_js/bootstrap.min.js"></script>
 
 </body>
