new second commit

--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -227,7 +227,7 @@
 
                 <div class="card mb-5 mx-auto col-sm-10">
                     <div class="card-body">
-                        <a href='https://github.com/iput2020-akamatsu/ml_x-ray'><h5 class="card-title str_center"><span>02_転移学習を用いた胸部Ｘ線画像モデルを用いたデスクトップアプリ開発</span></h5></a>
+                        <a href='x_ray_app_info.html'><h5 class="card-title str_center"><span>02_転移学習を用いた胸部Ｘ線画像モデルを用いたデスクトップアプリ開発</span></h5></a>
                         <p class="card-text">
                             <div class="row">
                                 <div class="col-sm-2"></div>
@@ -240,7 +240,7 @@
 
                                 <div class="col-sm-1"></div>
                                 <div class="col-sm-3 str_center">
-                                <a href="https://github.com/iput2020-akamatsu/qr_create_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
+                                <a href="https://github.com/iput2020-akamatsu/x_ray_classification_desktop_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
                                 </div>
                                 <div class="col-sm-4 str_center">
                                 <a href="x_ray_app_info.html" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">詳細へ</a>
@@ -256,7 +256,7 @@
 
                 <div class="card mb-5 mx-auto col-sm-10">
                     <div class="card-body">
-                        <a href='https://github.com/iput2020-akamatsu/qr_create_app'><h5 class="card-title str_center"><span>03_QR Create App</span></h5></a>
+                        <a href='qr_code_info.html'><h5 class="card-title str_center"><span>03_QR Create App</span></h5></a>
                         <p class="card-text">
                             <div class="row">
                                 <div class="col-sm-2"></div>
@@ -287,7 +287,7 @@
 
                 <div class="card mb-5 mx-auto col-sm-10">
                     <div class="card-body">
-                        <a href='https://github.com/iput2020-akamatsu/ml_x-ray'><h5 class="card-title str_center"><span>04_数字当てゲームコマンドラインアプリ</span></h5></a>
+                        <a href='https://github.com/iput2020-akamatsu/fig_search_cui'><h5 class="card-title str_center"><span>04_数字当てゲームコマンドラインアプリ</span></h5></a>
                         <p class="card-text">
                             <div class="row">
                                 <div class="col-sm-2"></div>
@@ -300,7 +300,7 @@
 
                                 <div class="col-sm-4"></div>
                                 <div class="col-sm-4 str_center">
-                                <a href="https://github.com/iput2020-akamatsu/qr_create_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
+                                <a href="https://github.com/iput2020-akamatsu/fig_search_cui" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
                                 </div>
                                 <div class="col-sm-4"></div>
                             </div>
@@ -310,7 +310,7 @@
 
                 <div class="card mb-5 mx-auto col-sm-10">
                     <div class="card-body">
-                        <a href='https://github.com/iput2020-akamatsu/ml_x-ray'><h5 class="card-title str_center"><span>05_数字当てゲーム(Fig_Search_App)デスクトップアプリ</span></h5></a>
+                        <a href='fig_search_app_info.html'><h5 class="card-title str_center"><span>05_数字当てゲーム(Fig_Search_App)デスクトップアプリ</span></h5></a>
                         <p class="card-text">
                             <div class="row">
                                 <div class="col-sm-2"></div>
@@ -323,7 +323,7 @@
 
                                 <div class="col-sm-1"></div>
                                 <div class="col-sm-3 str_center">
-                                <a href="https://github.com/iput2020-akamatsu/qr_create_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
+                                <a href="https://github.com/iput2020-akamatsu/fig_search_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
                                 </div>
                                 <div class="col-sm-4 str_center">
                                 <a href="fig_search_app_info.html" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">詳細へ</a>
