--- a/x_ray_app_info.html
+++ b/x_ray_app_info.html
@@ -123,10 +123,10 @@
 
                             <div class="col-sm-3"></div>
                             <div class="col-sm-3 str_center">
-                            <a href="https://github.com/iput2020-akamatsu/qr_create_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
+                            <a href="https://github.com/iput2020-akamatsu/x_ray_classification_desktop_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
                             </div>
                             <div class="col-sm-3 str_center">
-                                <a href="x_ray_app_info.html" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">制作物へ</a>
+                                <a href="https://drive.google.com/drive/folders/1lVSXfamr_NNMct4Z5EArC4_azDQ6bYbk?usp=sharing" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">制作物へ</a>
                             </div>
                             <div class="col-sm-3"></div>
                             
