--- a/fig_search_app_info.html
+++ b/fig_search_app_info.html
@@ -122,10 +122,10 @@
 
                             <div class="col-sm-3"></div>
                             <div class="col-sm-3 str_center">
-                            <a href="https://github.com/iput2020-akamatsu/qr_create_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
+                            <a href="https://github.com/iput2020-akamatsu/fig_search_app" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">GitHubへ</a>
                             </div>
                             <div class="col-sm-3 str_center">
-                                <a href="x_ray_app_info.html" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">制作物へ</a>
+                                <a href="https://drive.google.com/drive/folders/1-Z7t09kouN2-RRYveuQu7UCBPi_SOjkS?usp=sharing" class="btn btn-dark btn-lg disable" tabindex="-1" role="button" aria-disabled="true">制作物へ</a>
                             </div>
                             <div class="col-sm-3"></div>
 
