スライド埋め込み

--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -198,6 +198,9 @@
 
             <div class="row">
                 <div class="card mb-5 mx-auto col-sm-10">
+                    <span class="str_center padding_scale">
+                        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSxoqjUgu5tTWR1vkjZqheVpDNIAzpZl7Het3_DZLler7zfHqwUYcDzQfB97tsdtdLsLmKjov5uXDcw/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                    </span>
                     <div class="card-body">
                         <a href='https://github.com/iput2020-akamatsu/ml_x-ray'><h5 class="card-title str_center"><span>01_転移学習を用いた胸部Ｘ線画像モデルの作成と性能評価</span></h5></a>
                         <p class="card-text">
