--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -427,6 +427,37 @@
 
         </section>
 
+
+        <section class="margin-bottom padding_scale">
+            <div>
+                <h2 id="Graduation_Reserch" class="text-center"><span>Graduation Research</span></h2>
+            </div>
+
+            <div class="row">
+                <div class="card mb-5 col-sm-10 mx-auto" style="width: auto;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center"><span class="str_center">Small World Neural Network（SWNN）を用いた神経回路の成長予測シミュレーション</span></h5>
+                        <div class="card-text">
+                            <div class="row">
+                                <div class="col-sm-2"></div>
+                                <div class="col-sm-8">
+                                    <p>
+                                        人工知能モデルの最適化のために、スモールワールド性すなわち、任意のノードにたどり着くために、
+                                        少ないノード数を経由するだけでよいことを用いたニューラルネットワークで、脳神経回路モデルをプログラム上に構築し、
+                                        Small World Neural Network（SWNN） 等を用いたシミュレーションで脳の処理機構を明らかにすることを目的に研究しています。 
+                                    </p>
+                                
+                                </div>
+                                <div class="col-sm-2"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <section class="margin-bottom padding_scale">
 
             <div>
