--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -117,6 +117,10 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link active" href="#Graduation_Reserch" tabindex="-1" aria-disabled="true">Graduation Reserch</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link active" href="#skill_area" tabindex="-1" aria-disabled="true">Skills</a>
                     </li>
 
