--- a/portfolio_pages.html
+++ b/portfolio_pages.html
@@ -323,6 +323,9 @@
                 </div>
 
                 <div class="card mb-5 mx-auto col-sm-10">
+                    <span class="str_center padding_scale_top">
+                        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQL2r_3jN0BxbMjSCePI30EToYdZ2iHLOhoZj-ukpp-z_ONwTxCARajzQlPKNrIvd1VAiL1a1wGc7_2/embed?start=false&loop=false&delayms=3000" frameborder="0" width="800" height="450" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                    </span>
                     <div class="card-body">
                         <a href='fig_search_app_info.html'><h5 class="card-title str_center"><span>05_数字当てゲーム(Fig_Search_App)デスクトップアプリ</span></h5></a>
                         <p class="card-text">
